--- a/sales/modules/hipotecarios/templates/bannerGracias.html
+++ b/sales/modules/hipotecarios/templates/bannerGracias.html
@@ -1,5 +1,5 @@
 <div id="graciasHeader">
-	<h1>¡Enviamos los datos cargados<br/>en el Simulador! </h1>
+	<h1>¡Felicitaciones! Ya podés acercarte a la sucursal para continuar tu solicitud</h1>
 </div>
 
 <style>
@@ -19,6 +19,22 @@
 	    color: white;
 	    font-family: 'BBVA Web Book';
 	    margin-top: 0px;
+    }
+    
+    @media (min-width: 992px){
+    	div#graciasHeader h1{
+		    position: relative;
+		    top: 50%;
+		    transform: translateY(-50%);
+		    -webkit-transform: translateY(-50%);
+		    -ms-transform: translateY(-50%);
+		    text-align: center;
+		    color: white;
+		    font-family: 'BBVA Web Book';
+		    margin-top: 0px;
+		    margin-right:100px;
+		    margin-left:100px;
+    	}	
     }
 
 </style>
