--- a/sales/modules/hipotecarios/views/gracias.html
+++ b/sales/modules/hipotecarios/views/gracias.html
@@ -11,11 +11,11 @@
 </div>
 
 <div class="row plusPadLeft">
-	<div class="col-xs-1">
-		<img alt="" class="iconoMail" src="img/shared/ico_mail.png">
+	<div class="col-xs-2 col-md-1">
+		<img alt="" class="img-responsive center-block" src="img/shared/ico_mail.png">
 	</div>
 	
-	<div class="col-xs-11">
+	<div class="col-xs-10 col-md-11">
 		<p class="mensaje">Los datos de tu simulación fueron enviados a tu casilla de correo en un archivo .PDF, en cual podrás descargar e imprimir.</p>
 	</div>
 	
@@ -28,11 +28,11 @@
 </div>
 
 <div class="row plusPadLeft">
-	<div class="col-xs-1">
-		<img alt="" class="iconoMail" src="img/shared/ico_mail.png">
+	<div class="col-xs-2 col-md-1">
+		<img alt="" class="img-responsive center-block" src="img/shared/ico-pdf-blue.png">
 	</div>
 	
-	<div class="col-xs-11">
+	<div class="col-xs-10 col-md-11">
 		<p class="mensaje">En este archivo, además del simulador, entrarás información útil y los pasos a seguir en el caso de estar interesado en continuar con el Préstamo Hipotecario.</p>
 	</div>
 	
@@ -45,12 +45,12 @@
 </div>
 
 <div class="row plusPadLeft">
-	<div class="col-xs-1">
-		<img alt="" class="iconoMail" src="img/shared/ico_mail.png">
+	<div class="col-xs-2 col-md-1">
+		<img alt="" class="img-responsive center-block" src="img/shared/ico-sucu-blue.png">
 	</div>
 	
-	<div class="col-xs-11">
-		<p class="mensaje">Te invitamos a acercarte a cualquiera de nuestras sucursales para recibir más información.</p>
+	<div class="col-xs-10 col-md-11">
+		<p class="mensaje">Te invitamos a acercarte a la sucursal que has seleccionado dónde podrás recibir más información.</p>
 	</div>
 	
 </div>
@@ -68,7 +68,10 @@
 </div>
 
 <!-- telefono -->
-<div class="row plusPadLeft">
+<div class="row">
+	<div class="col-xs-12 ">
+		<p class="mesajeTelefono">¿Necesitás ayuda? Podés realizar tus consultas telefónicamente.</p>
+	</div>
 	<div class="col-xs-12 ">
 		<a href="" class="hidden-xs hidden-sm" style="cursor: default;"><img src="img/shared/ico_tel.png"><span class="telefono">{{msg().telefono}}</span></a>
 		<a ng-href="tel:+{{msg().telefono}}" class="hidden-md hidden-lg" style="cursor: default;"><img src="img/shared/ico_tel.png"><span class="telefono">{{msg().telefono}}</span></a>
