--- a/sales/modules/referidos/views/consulta.html
+++ b/sales/modules/referidos/views/consulta.html
@@ -4,15 +4,18 @@
     <ul class="icons-consulta">
         <li>
             <span class="icon-g-ico_people"></span>
-            <p>Datos <br> personales</p>
+            <p>Paso 1</p>
+            <p>Datos personales</p>
         </li>
         <li>
             <span class="icon-g-herramienta"></span>
-            <p>Configuración <br> Cuenta Sueldo</p>
+            <p>Paso 2</p>
+            <p>Abrimos tu <br> Cuenta Sueldo</p>
         </li>
         <li>
             <span class="icon-g-Paper"></span>
-            <p>Registro <br> de firma</p>
+            <p>Paso 3</p>
+            <p>Informas tu nueva <br> cuenta a tu Empresa</p>
         </li>
     </ul>
     <div class="row">
