--- a/sales/modules/referidos/views/paso2.html
+++ b/sales/modules/referidos/views/paso2.html
@@ -4,12 +4,12 @@
 		<form>
 			<div class="form-group col-md-6">
 				<label for="emailId" class="control-label">Email</label>
-				<input type="text" id="emailId" class="form-control">
+				<input type="text" id="emailId" class="form-control" placeholder="mariagonzalez@gmail.com">
 			</div>
 
 			<div class="form-group col-md-6">
 				<label for="CelId" class="control-label">Celular</label>
-				<input type="text" id="CelId" class="form-control">
+				<input type="text" id="CelId" class="form-control" placeholder="Ej: 1169167656">
 			</div>
 			<div class="row">
 				<div class="col-xs-12 text-center bt-step-one">
