--- a/sales/styles/core/_settings.scss
+++ b/sales/styles/core/_settings.scss
@@ -13,6 +13,10 @@ $font-size:					12px;
 $font-weight:				400;
 $font-family:				"BBVA Web Book", Helvetica, sans-serif;
 $font:						$font-weight toem($font-size) $font-family;
+$main-bt-color: 			#094fa4;
+$main-bt-color-hover:		#417ec7;
+$second-bt-color:			#86c82d;
+$second-bt-color-hover:		#73ad26;;
 
 /*$font-weight-light:			300;
 $font-weight-regular: 	    $font-weight;
