--- a/sales/modules/hipotecarios/style/_base.scss
+++ b/sales/modules/hipotecarios/style/_base.scss
@@ -6,6 +6,14 @@
 	.bigMarginTop{
 		margin-top: 100px !important;
 	}
+	.mediumMarginTop{
+		margin-top: 10px !important;
+		display: table;
+		span, p {
+			display: table-cell;
+		}
+		span {padding-right: 5px; position: initial;}
+	}
 }
 
 input.btn-simular{
@@ -31,4 +39,15 @@ input.btn-simular:hover{
 
 .masInfoMargen{
 	margin-left: 14px;
+}
+
+.textoInfo{
+	font-family: BBVA Web Book;
+  	font-size: 12px;
+  	font-weight: normal;
+  	font-style: normal;
+  	font-stretch: normal;
+  	line-height: 0.58;
+  	letter-spacing: normal;
+  	color: rgba(155, 155, 155, 0.86);
 }
