--- a/sales/modules/hipotecarios/views/errorSimulacion.html
+++ b/sales/modules/hipotecarios/views/errorSimulacion.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-xs-12">
-		<h1 class="titulo">Resultados de tu simulación</h1>
+		<h1 class="titulo centered">Resultados de tu simulación</h1>
 	</div>
 </div>
 
@@ -24,7 +24,10 @@
 
 <div class="row">
 	<div class="col-xs-12">
-		<p class="mensaje">En este momento no podemos procesar tu solicitud por inconvenientes técnicos, por favor volvé a intentar en unos minutos. Muchas gracias.</p>  
+		<p class="mensaje">En este momento no podemos procesar tu solicitud por inconvenientes técnicos, por favor volvé a intentar en unos minutos.</p>  
+	</div>
+	<div class="col-xs-12">
+		<p class="mensaje">Muchas gracias.</p>  
 	</div>
 </div>
 
@@ -48,7 +51,10 @@
 </div>
 
 <!-- telefono -->
-<div class="row plusPadLeft">
+<div class="row">
+	<div class="col-xs-12 ">
+		<p class="mesajeTelefono">¿Necesitás ayuda? Podés realizar tus consultas telefónicamente.</p>
+	</div>
 	<div class="col-xs-12 ">
 		<a href="" class="hidden-xs hidden-sm" style="cursor: default;"><img src="img/shared/ico_tel.png"><span class="telefono">{{msg().telefono}}</span></a>
 		<a ng-href="tel:+{{msg().telefono}}" class="hidden-md hidden-lg" style="cursor: default;"><img src="img/shared/ico_tel.png"><span class="telefono">{{msg().telefono}}</span></a>
