--- a/sales/modules/hipotecarios/views/sinOferta.html
+++ b/sales/modules/hipotecarios/views/sinOferta.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-xs-12">
-		<h1 class="titulo">Resultados de tu simulación</h1>
+		<h1 class="titulo centered">Resultados de tu simulación</h1>
 	</div>
 </div>
 
@@ -24,7 +24,10 @@
 
 <div class="row">
 	<div class="col-xs-12">
-		<p class="mensaje">Los datos que nos proporcionaste no nos son suficientes para realizar un cálculo para la oferta de préstamo hipotecario. Te invitamos acercarte a cualquiera de nuestras sucursales para más información.</p>  
+		<p class="mensaje">Los datos que nos proporcionaste no nos son suficientes para realizar un cálculo para la oferta de préstamo hipotecario.</p>  
+	</div>
+	<div class="col-xs-12">
+		<p class="mensaje">Te invitamos acercarte a cualquiera de nuestras sucursales para más información.</p>  
 	</div>
 </div>
 
@@ -48,7 +51,10 @@
 </div>
 
 <!-- telefono -->
-<div class="row plusPadLeft">
+<div class="row">
+	<div class="col-xs-12 ">
+		<p class="mesajeTelefono">¿Necesitás ayuda? Podés realizar tus consultas telefónicamente.</p>
+	</div>
 	<div class="col-xs-12 ">
 		<a href="" class="hidden-xs hidden-sm" style="cursor: default;"><img src="img/shared/ico_tel.png"><span class="telefono">{{msg().telefono}}</span></a>
 		<a ng-href="tel:+{{msg().telefono}}" class="hidden-md hidden-lg" style="cursor: default;"><img src="img/shared/ico_tel.png"><span class="telefono">{{msg().telefono}}</span></a>
