--- a/sales/modules/referidos/style/_fonts.scss
+++ b/sales/modules/referidos/style/_fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'referidos';
   src:
-    url('../fonts/referidos.ttf?72zjan') format('truetype'),
-    url('../fonts/referidos.woff?72zjan') format('woff'),
-    url('../fonts/referidos.svg?72zjan#referidos') format('svg');
+    url('../fonts/referidos.ttf?21r0rq') format('truetype'),
+    url('../fonts/referidos.woff?21r0rq') format('woff'),
+    url('../fonts/referidos.svg?21r0rq#referidos') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -23,69 +23,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-g-_card_master .path1:before {
+.icon-ico_green_check:before {
   content: "\e900";
-  color: rgb(0, 0, 0);
-}
-.icon-g-_card_master .path2:before {
-  content: "\e901";
-  margin-left: -1.4931640625em;
-  color: rgb(244, 244, 244);
-}
-.icon-g-_card_master .path3:before {
-  content: "\e902";
-  margin-left: -1.4931640625em;
-  color: rgb(169, 173, 170);
-}
-.icon-g-_card_master .path4:before {
-  content: "\e903";
-  margin-left: -1.4931640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-_card_master .path5:before {
-  content: "\e904";
-  margin-left: -1.4931640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-_card_master .path6:before {
-  content: "\e905";
-  margin-left: -1.4931640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-_card_master .path7:before {
-  content: "\e906";
-  margin-left: -1.4931640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-_card_master .path8:before {
-  content: "\e907";
-  margin-left: -1.4931640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-_card_master .path9:before {
-  content: "\e908";
-  margin-left: -1.4931640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-_card_master .path10:before {
-  content: "\e909";
-  margin-left: -1.4931640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-_card_master .path11:before {
-  content: "\e90a";
-  margin-left: -1.4931640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-_card_master .path12:before {
-  content: "\e90b";
-  margin-left: -1.4931640625em;
-  color: rgb(231, 76, 61);
-}
-.icon-g-_card_master .path13:before {
-  content: "\e90c";
-  margin-left: -1.4931640625em;
-  color: rgb(240, 196, 27);
 }
 .icon-g-_ico_avion:before {
   content: "\e90d";
@@ -107,70 +46,6 @@
 }
 .icon-g-BBVA:before {
   content: "\e912";
-}
-.icon-g-card_visa .path1:before {
-  content: "\e913";
-  color: rgb(0, 0, 0);
-}
-.icon-g-card_visa .path2:before {
-  content: "\e914";
-  margin-left: -1.5556640625em;
-  color: rgb(244, 244, 244);
-}
-.icon-g-card_visa .path3:before {
-  content: "\e915";
-  margin-left: -1.5556640625em;
-  color: rgb(169, 173, 170);
-}
-.icon-g-card_visa .path4:before {
-  content: "\e916";
-  margin-left: -1.5556640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-card_visa .path5:before {
-  content: "\e917";
-  margin-left: -1.5556640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-card_visa .path6:before {
-  content: "\e918";
-  margin-left: -1.5556640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-card_visa .path7:before {
-  content: "\e919";
-  margin-left: -1.5556640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-card_visa .path8:before {
-  content: "\e91a";
-  margin-left: -1.5556640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-card_visa .path9:before {
-  content: "\e91b";
-  margin-left: -1.5556640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-card_visa .path10:before {
-  content: "\e91c";
-  margin-left: -1.5556640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-card_visa .path11:before {
-  content: "\e91d";
-  margin-left: -1.5556640625em;
-  color: rgb(102, 102, 102);
-}
-.icon-g-card_visa .path12:before {
-  content: "\e91e";
-  margin-left: -1.5556640625em;
-  color: rgb(35, 148, 188);
-}
-.icon-g-card_visa .path13:before {
-  content: "\e91f";
-  margin-left: -1.5556640625em;
-  color: rgb(239, 199, 94);
 }
 .icon-g-herramienta:before {
   content: "\e920";
