--- a/sales/modules/referidos/views/paso3.html
+++ b/sales/modules/referidos/views/paso3.html
@@ -15,13 +15,12 @@
 a estar enviando a la sucursal que nos indicaste dentro de los próximos 10 días.</p>
 
 		<form name="condiciones" class="text-center conditions">
-			<div class="check-conditions">
-				<input type="checkbox" ng-init="checkStaate = false" ng-model="checkStaate">
-				<span class="normal-text">Acepto <a href="">Términos y Condiciones</a></span>
+			<div checkbox checked="checked">
+				<label>Acepto <a href="">Términos y Condiciones</a></label>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 text-center">
-					<button class="btn btn-enviar confirm" ng-click="continue()">Continuar</button>
+					<button class="btn btn-enviar confirm" ng-click="continue()" ng-disabled="!checked">Continuar</button>
 				</div>
 			</div>
 		</form>
